--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "jest": "^26.6.1"
+    "jest": "^26.6.3"
+  },
+  "scripts": {
+    "test": "yarn jest"
   }
 }
